syntax = "proto3";

package trpc.wealthai.strategy_spec;

import "google/protobuf/empty.proto";

option go_package="github.com/wealthai-cc/protocol/strategy_spec";

// 订单类型枚举
enum OrderType {
    INVALID_ORDER_TYPE = 0;
    MARKET_ORDER_TYPE = 1; // 市价单
    LIMIT_ORDER_TYPE = 2; // 限价单
    STOP_MARKET_ORDER_TYPE = 3; // 止损市价单
    STOP_LIMIT_ORDER_TYPE = 4; // 止损限价单
}

enum OrderStatusType {
    INVALID_ORDER_STATUS_TYPE = 0; // 无效状态
    NEW_ORDER_STATUS_TYPE = 1; // 新建订单
    PARTIALLY_FILLED_ORDER_STATUS_TYPE = 2; // 部分成交
    FILLED_ORDER_STATUS_TYPE = 3; // 完全成交
    CANCELED_ORDER_STATUS_TYPE = 4; // 已取消
    PENDING_CANCEL_ORDER_STATUS_TYPE = 5; // 待取消中
    REJECTED_ORDER_STATUS_TYPE = 6; // 已拒绝
    EXPIRED_ORDER_STATUS_TYPE = 7; // 已过期
}

// 交易方向枚举
enum DirectionType {
  INVALID_DIRECTION_TYPE = 0;
  BUY_DIRECTION_TYPE = 1;               // 买入
  SELL_DIRECTION_TYPE = 2;              // 卖出
}

enum TimeInForceType {
    INVALID_TIME_IN_FORCE_TYPE = 0;
    DAY_TIME_IN_FORCE_TYPE = 1; // 当日有效（按市场所在时区计算"当日"）
    GTC_TIME_IN_FORCE_TYPE = 2; // 撤单前有效
}

// 交易订单
message Order {
  string order_id = 1; // 交易所订单ID（仅当订单已经被交易所接纳时生效）
  int64 create_ts = 2;         // 订单生成时间戳（unix毫秒时间戳）
  int64 update_ts = 3; // 订单更新时间戳（unix毫秒时间戳）
  string remark = 4; // 订单备注
  DirectionType direction_type = 5;      // 交易方向
  OrderType order_type = 6; // 订单类型
  Currency limit_price = 7; // limit价格（在OrderType含limit时）
  Currency stop_price = 8; // 触发价（止损/止盈）
  string symbol = 9; // 品种
  double qty = 10;         // 交易数量
  string unique_id = 11; // 订单唯一幂等ID（防重下单用）
  TimeInForceType time_in_force = 12; // 订单有效时长（TIF）
  OrderStatusType status = 13; // 订单状态
  double executed_size = 14; // 已成交数量
  Currency avg_fill_price = 15; // 平均成交金额
  Currency commission = 16; // 已支付的佣金
  string cancel_reason = 17; // 当订单已被取消时，被取消的原因
  // TODO：增加联动订单选项
}