syntax = "proto3";

package trpc.wealthai.strategy_spec;

import "google/protobuf/empty.proto";

option go_package="github.com/wealthai-cc/protocol/strategy_spec";

// rpc message definition

enum HealthStatus {
    HEALTHY = 0; // 健康
    DEGRADED = 1; // 降级（部分功能不可用）
    UNHEALTHY = 2; // 不健康
}

message HealthResponse {
    HealthStatus status = 1; // 健康状态
    string message = 2; // 状态描述
    repeated string details = 3; // 详细信息（不可用依赖、降级原因等）
}

enum TriggerType {
    INVALID_TRIGGER_TYPE = 0;
    MARKET_DATA_TRIGGER_TYPE = 1; // 行情数据触发
    RISK_MANAGE_TRIGGER_TYPE = 2; // 风控（如强平、补充保证金等）触发
    ORDER_STATUS_TRIGGER_TYPE = 3; // 订单状态变更（如成交、拒绝、撤销）触发
}

message TriggerDetail {
    // 这里不能用oneof，要考虑到与策略可能使用json通信的问题
    // 以下Detail只会有一个有值，由TriggerType决定
    MarketDataTriggerDetail market_data_trigger_detail = 1; // 行情数据事件触发细节
    RiskManageTriggerDetail risk_manage_trigger_detail = 2; // 风控事件触发细节
}

message MarketDataTriggerDetail {
    int64 server_ts = 1; // 服务器unix时间戳（ms）
}

message RiskManageTriggerDetail {
    enum RiskEventType {
        INVALID_RISK_EVENT_TYPE = 0;
        MARGIN_CALL_EVENT_TYPE = 1; // 补齐保证金风控
    }
    RiskEventType risk_event_type = 1; // 风控事件类型
    string remark = 2;
}

message ExecRequest {
    int64 max_timeout = 1; // 最大超时秒数
    TriggerType trigger_type = 2; // 策略触发事件类型
    TriggerDetail trigger_detail = 3; // 策略触发事件详细
    repeated MarketDataContext market_data_context = 4; // 市场行情上下文数据，可支持多分辨率行情数据同时传递
    Account account = 5; // 目前账户的数据
    repeated Order incomplete_orders = 6; // 所有未完成订单
    repeated Order completed_orders = 7; // 所有已完成订单（时间范围在策略管理系统配置）
    string exchange = 8; // 交易所名称，佣金计算需要调用 SDK 查询。支持扩展的交易所标识（如 "binance", "okx", "bybit"），使用小写字符串，仅支持字母数字和连字符。默认为 "binance"。
    string exec_id = 9; // 执行唯一ID
    map<string,string> strategy_param = 100; // 透传给策略的参数
}

enum OrderOpType {
    INVALID_ORDER_OP_TYPE = 0;
    CREATE_ORDER_OP_TYPE = 1; // 创建新订单
    WITHDRAW_ORDER_OP_TYPE = 2; // 撤销已有订单
    MODIFY_ORDER_OP_TYPE = 3; // 修改已有订单
}

message OrderOpEvent {
    OrderOpType order_op_type = 1; // 订单操作事件类型
    Order order = 2; // 订单
}

message ExecResponse {
    repeated OrderOpEvent order_op_event = 1; // 订单操作事件
    enum ExecutionStatus {
        SUCCESS = 0; // 执行成功
        PARTIAL_SUCCESS = 1; // 部分成功（部分订单生成或校验失败）
        FAILED = 2; // 执行失败
    }
    ExecutionStatus status = 2; // 执行状态
    string error_message = 3; // 错误信息（当status=FAILED时）
    repeated string warnings = 4; // 警告信息（非致命问题）
}

service StrategySpec {
    // Health 策略健康探测接口
    rpc Health(google.protobuf.Empty) returns (HealthResponse);
    // Exec 策略执行接口，只支持执行单品种下的同步策略
    rpc Exec(ExecRequest) returns (ExecResponse);
}
